Fixed the horizontal scrollbar styling and added working modal that needs to be styled further

--- a/gpaste/paste/static/styles/sass/main.scss
+++ b/gpaste/paste/static/styles/sass/main.scss
@@ -96,7 +96,7 @@ label {
 	font-size: 10pt;
 }
 
-#paste-submit {
+button {
 	border: none;
     padding: 5px 25px;
     border-color: #29274b;
@@ -108,13 +108,16 @@ label {
     background-color: rgba(187, 124, 9, .95);
 }
 
-#paste-submit:hover {
+button:hover {
     color: #fff;
     background-color: $primary-color;
 }
 
 #encrypt-button {
     display: inline-block;
+    position: relative;
+    top: 6px;
+    left: 2px;
     padding: 0;
     margin: 0;
     border: 0;
@@ -129,9 +132,7 @@ label {
 .icon {
     width: 25px;
     height: 25px;
-    position: relative;
-    top: 6px;
-    left: 2px;
+    pointer-events: none;
 }
 
 #unlocked-icon {
@@ -242,6 +243,7 @@ select {
 
 ::-moz-scrollbar {
 	width: .4em;
+    height: .5em;
 }
 
 ::-moz-scrollbar-track {
@@ -257,6 +259,7 @@ select {
 
 ::-webkit-scrollbar {
 	width: .4em;
+    height: .5em;
 }
 
 ::-webkit-scrollbar-track {
@@ -268,4 +271,47 @@ select {
 	outline: 20px solid $primary-color;
 	border-radius: 3px;
 	-webkit-border-radius: 3px;
+}
+
+
+/* Modal */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rbg(0,0,0);
+    background-color: rbga(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #inherit;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-footer {
+    border-top: 1px solid;
+    text-align: right;
 }
